# journ

./: .gitignore  Alamar  README.md  journaling_app_erd.pgerd  main.py  pyproject.toml  setup.py  test_lua.lua
.github/workflows/: ci.yml
journ/: main.py
src/journ/: __main__.py  actions.py  analytics.py  browse.py  builtin_editor.py  cli.py  config.py  content.py  crypto.py  db.py  mcp_keychain.py  mcp_server.py  models.py  shell.py  streak.py  terminal.py  ui.py  words.py
tests/: conftest.py  test_actions.py  test_analytics.py  test_browse.py  test_builtin_editor.py  test_cli.py  test_content.py  test_crypto.py  test_db.py  test_editor.py  test_mcp_keychain.py  test_mcp_server.py  test_shell.py  test_streak.py  test_ui.py  test_words.py
